--- a/conf/cluster.conf
+++ b/conf/cluster.conf
@@ -1,6 +1,6 @@
 number_of_clusters: 10
-number_of_vector_hash_tables:
-number_of_vector_hash_functions: 6
-max_number_M_hypercube:
-number_of_hypercube_dimensions: 4
-number_of_probes: 2
+number_of_vector_hash_tables: 4
+number_of_vector_hash_functions: 4
+max_number_M_hypercube: 10
+number_of_hypercube_dimensions: 14
+number_of_probes: 3
